<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="1"
    android:layout_marginBottom="4dp">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:contentDescription="@string/restaurant_image_description"
        android:id="@+id/restaurantImageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/restaurantNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restaurant_name_placeholder"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/categoryTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cuisine_placeholder"
            android:textStyle="italic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/ratingTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:text="@string/rating_placeholder"
                android:textColor="@color/colorAccent" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>