<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    tools:context="com.example.brian.myrestaurants.ui.RestaurantDetailFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scaleType="centerCrop"
            android:id="@+id/restaurantImageView"/>
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restaurant_name_placeholder"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textSize="20sp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:id="@+id/restaurantNameTextView"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rating_placeholder"
                android:layout_alignTop="@id/restaurantNameTextView"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                android:id="@+id/ratingTextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/restaurantNameTextView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:textColor="@color/colorSecondaryText"
                android:textStyle="italic"
                android:text="@string/cuisine_placeholder"
                android:id="@+id/cuisineTextView"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:paddingLeft="30dp"
                android:paddingTop="5dp"
                android:paddingRight="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableStart="@drawable/ic_exit_to_app_black_24dp"
                    android:drawableLeft="@drawable/ic_exit_to_app_black_24dp"
                    android:drawablePadding="4dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:text="@string/view_on_yelp"
                    android:gravity="center"
                    android:id="@+id/websiteTextView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_local_phone_black_24dp"
                    android:drawableStart="@drawable/ic_local_phone_black_24dp"
                    android:drawablePadding="4dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:text="@string/phone_placeholder"
                    android:gravity="center"
                    android:id="@+id/phoneTextView"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_map_black_24dp"
                    android:drawableStart="@drawable/ic_map_black_24dp"
                    android:drawablePadding="4dp"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="13sp"
                    android:textStyle="bold"
                    android:text="@string/address_placeholder"
                    android:gravity="center_vertical"
                    android:id="@+id/addressTextView" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_restaurant_button"
                android:layout_alignParentBottom="true"
                android:background="@color/colorAccent"
                android:textColor="@color/colorIcons"
                android:textSize="15sp"
                android:id="@+id/saveRestaurantButton" />

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>
